--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@jsquash/qoi": "^1.1.0",
     "@jsquash/webp": "^1.5.0",
     "next": "15.4.6",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
